--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   padding: 0;
+  font-family: 'Press Start 2P', sans-serif;
+  font-weight: 400;
 }
 
 .root {
@@ -9,9 +11,9 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  max-width: 100vw;
-  max-height: 850px;
-  color: #B7DDEC;
+  max-width: 460px;
+  max-height: 100%;
+  color: #ffffff;
   margin: 0 auto;
 }
 
@@ -21,23 +23,24 @@ body {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  border: 4px solid #B7DDEC;
-  border-radius: 15px;
-  -webkit-box-shadow: inset 0 0 15px #c2f6fc;
-          box-shadow: inset 0 0 15px #c2f6fc;
+  border: 4px solid #665a5a;
+  border-radius: 5px;
+  -webkit-box-shadow: inset 0 0 15px #958d8d;
+          box-shadow: inset 0 0 15px #958d8d;
   position: absolute;
   margin: 0 auto;
-  max-width: 100vw;
-  max-height: 850px;
-  min-height: 100vw;
+  max-width: 460px;
+  max-height: 100%;
+  min-height: 685px;
   min-width: 100vw;
-  background-color: #0f315b;
+  background-color: #1A1A1D;
+  background-image: url(/src/img/bg1.gif);
 }
 
 .root .page__start {
-  max-width: 100vw;
-  max-height: 850px;
-  min-height: 100vw;
+  max-width: 460px;
+  max-height: 100%;
+  min-height: 685px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -45,14 +48,13 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  position: absolute;
-  z-index: 8;
 }
 
 .root .page__start-hello-heading {
-  margin: 95px auto;
+  margin: 60px auto 0 auto;
   text-align: center;
-  font-size: 25px;
+  font-size: 16px;
+  line-height: 20px;
   color: #e9f6fb;
 }
 
@@ -60,9 +62,10 @@ body {
   margin-top: 45px;
   padding: 25px;
   text-align: center;
-  color: #B7DDEC;
-  font-family: "Roboto Slab", sans-serif;
-  line-height: 30px;
+  color: #ffffff;
+  font-family: "Press Start 2P", sans-serif;
+  line-height: 20px;
+  font-size: 15px;
 }
 
 .root .page__start-jaba {
@@ -72,8 +75,8 @@ body {
 }
 
 .root .page__question {
-  max-width: 100vw;
-  max-height: 850px;
+  max-width: 460px;
+  max-height: 100%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -84,13 +87,11 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  position: absolute;
-  z-index: 7;
 }
 
 .root .page__question1 {
-  max-width: 100vw;
-  max-height: 850px;
+  max-width: 460px;
+  max-height: 100%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -101,14 +102,12 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  position: absolute;
-  z-index: 6;
 }
 
 .root .page__answer {
-  max-width: 100vw;
-  max-height: 850px;
-  min-height: 100vw;
+  max-width: 460px;
+  max-height: 100%;
+  min-height: 100%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -119,8 +118,6 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  position: absolute;
-  z-index: 5;
 }
 
 .root .page__answer-hedding {
@@ -131,7 +128,7 @@ body {
 
 .root .page__answer-description {
   width: 85vw;
-  height: 300px;
+  height: 200px;
   overflow-y: scroll;
   text-align: center;
   font-size: 18px;
@@ -139,25 +136,21 @@ body {
   padding: 0 25px;
 }
 
-.root .page__finish {
-  position: absolute;
-  z-index: 4;
-}
-
 .btn {
+  width: 300px;
   margin: 15px auto;
   display: block;
-  color: #B7DDEC;
-  border: 5px solid #2A73BB;
+  color: #ffffff;
+  border: 5px solid #363434;
   border-radius: 1rem;
   background: transparent;
-  font-size: 15px;
-  padding: 15px 50px;
-  font-family: "Roboto Slab", sans-serif;
+  font-size: 13px;
+  padding: 10px 40px;
+  font-family: "Press Start 2P", sans-serif;
   position: relative;
   cursor: pointer;
-  -webkit-box-shadow: inset 0 0 0.5em 0 #2A73BB, 0 0 0.5em 0 #2A73BB;
-          box-shadow: inset 0 0 0.5em 0 #2A73BB, 0 0 0.5em 0 #2A73BB;
+  -webkit-box-shadow: inset 0 0 0.5em 0 #363434, 0 0 0.5em 0 #363434;
+          box-shadow: inset 0 0 0.5em 0 #363434, 0 0 0.5em 0 #363434;
 }
 
 .btn__start {
@@ -166,6 +159,11 @@ body {
 
 .btn_reload {
   margin-top: 0px;
+}
+
+.page__scores {
+  position: absolute;
+  bottom: 0px;
 }
 
 .number-question {
@@ -177,7 +175,7 @@ body {
 
 .image-question {
   width: 90vw;
-  margin: 0 5vw;
+  margin: 0 auto;
   border-radius: 5px;
   margin-bottom: 10px;
 }
@@ -199,7 +197,7 @@ body {
 
 .page__scores-true {
   color: #018b48;
-  font-family: "Roboto Slab", sans-serif;
+  font-family: "Press Start 2P", sans-serif;
   font-weight: 700;
   font-size: 24px;
   margin-right: 60px;
@@ -207,7 +205,7 @@ body {
 
 .page__scores-false {
   color: #8b0101;
-  font-family: "Roboto Slab", sans-serif;
+  font-family: "Press Start 2P", sans-serif;
   font-weight: 700;
   font-size: 24px;
 }
