--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,19 +1,23 @@
+
 body{
     margin: 0;
     padding: 0;
+    font-family: 'Press Start 2P', sans-serif;
+    font-weight: 400;
 }
 
-$font-f: 'Roboto Slab', sans-serif;
-$color-b: #0f315b;
-$color-btn: #2A73BB;
-$color-text: #B7DDEC;
+//$font-f: 'Roboto Slab', serif;
+$font-f: 'Press Start 2P', sans-serif;
+$color-b: #1A1A1D;
+$color-btn: rgb(54, 52, 52);
+$color-text: #ffffff;
 $color-span: #e9f6fb;
 
 
 $min-w:100vw;
-$min-h:100vw;
-$max-w:100vw;
-$max-h:850px;
+$min-h:685px;
+$max-w:460px;
+$max-h:100%;
 
 
 .root{
@@ -26,9 +30,9 @@ $max-h:850px;
     .page{
         box-sizing: border-box;
         flex: 1;
-        border: 4px solid $color-text;
-        border-radius: 15px;
-        box-shadow: inset 0 0 15px rgb(194, 246, 252);
+        border: 4px solid rgb(102, 90, 90);
+        border-radius: 5px;
+        box-shadow: inset 0 0 15px rgb(149, 141, 141);
         position: absolute;
         margin: 0 auto;
         max-width: $max-w;
@@ -36,18 +40,20 @@ $max-h:850px;
         min-height: $min-h;
         min-width: $min-w;
         background-color: $color-b;
+        background-image: url(/src/img/bg1.gif);
         &__start{
             max-width: $max-w;
             max-height: $max-h;
             min-height: $min-h;
             display: flex;
             flex-direction: column;
-            position: absolute;
-            z-index: 8;
+            // position: absolute;
+            // z-index: 8;
             &-hello-heading{
-                margin: 95px auto;
+                margin: 60px auto 0 auto;
                 text-align: center;
-                font-size: 25px;
+                font-size: 16px;
+                line-height: 20px;
                 color: $color-span;
             }
             &-hello-text{
@@ -56,7 +62,8 @@ $max-h:850px;
                 text-align: center;
                 color: $color-text;
                 font-family: $font-f;
-                line-height: 30px;
+                line-height: 20px;
+                font-size: 15px;
             }
             &-jaba{
                 // margin-top: 175px;
@@ -72,8 +79,8 @@ $max-h:850px;
             align-items: center;
             display: flex;
             flex-direction: column;
-            position: absolute;
-            z-index: 7;
+            // position: absolute;
+            // z-index: 7;
 
         }
         &__question1{   
@@ -82,18 +89,19 @@ $max-h:850px;
             align-items: center;      //вторая страница вопросов
             display: flex;
             flex-direction: column;
-            position: absolute;
-            z-index: 6;
+            // position: absolute;
+            // z-index: 6;
+            
         }
         &__answer{
             max-width: $max-w;
             max-height: $max-h;
-            min-height: 100vw;
+            min-height: 100%;
             align-items: center;
             display: flex;
             flex-direction: column;
-            position: absolute;
-            z-index: 5;
+            // position: absolute;
+            // z-index: 5;
             &-hedding{
                 text-align: center;
                 font-size: 20px;
@@ -101,7 +109,7 @@ $max-h:850px;
             }
             &-description{
                 width: 85vw;
-                height: 300px;
+                height: 200px;
                 overflow-y: scroll;
                 text-align: center;
                 font-size: 18px;
@@ -110,21 +118,22 @@ $max-h:850px;
             }
         }
         &__finish{
-            position: absolute;
-            z-index: 4;
+            // position: absolute;
+            // z-index: 4;
         }
     }
 }
 
 .btn{
+    width: 300px;
     margin: 15px auto;
     display: block;
     color: $color-text;
     border: 5px solid $color-btn;
     border-radius: 1rem;
     background: transparent;
-    font-size: 15px;
-    padding: 15px 50px;
+    font-size: 13px;
+    padding: 10px 40px;
     font-family: $font-f;
     position: relative;
     cursor: pointer;
@@ -150,7 +159,10 @@ $max-h:850px;
 .btn_reload{
     margin-top: 0px;
 }
-
+.page__scores{
+    position: absolute;
+    bottom: 0px;
+}
 .number-question{
     text-align: center;
     font-size: 20px;
@@ -160,7 +172,7 @@ $max-h:850px;
 
 .image-question{
     width: 90vw;
-    margin: 0 5vw;
+    margin: 0 auto;
     border-radius: 5px;
     margin-bottom: 10px;
 }
